[package]
name = "ju"
version = "0.2.3"
authors = ["Clivern <hello@clivern.com>"]
edition = "2021"
description = "A Command Line Tool for Fast System Navigation in Rust"
license = "MIT"
repository = "https://github.com/Clivern/Jump"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
home = "0.5.9"
inquire = "0.6.2"
serde = "1.0.195"
serde_json = "1.0.113"
serde_with = "3.5.1"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
